--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
-Hello World
+<html>
+  <head></head>
+  <body>Hello World
 <a href="https://clarkdc.github.io/russellst"> russellst </a>
+  </body>
+</html>
