--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ body, html {
 
 .parallax {
   /* The image used */
-  background-image: 'prism.png';
+  background-image: url("https://clarkdc.github.io/images/prism.png");
 
   /* Full height */
   height: 100%; 
