--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ h3 {
 
 <div class="bgimg-1">
   <div class="caption">
-  <span class="border">COOL!</span>
+    <span class="border"><a href="https://eigensec.com/russellst/index.html">COOL!</a></span>
   </div>
 </div>
 
