--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@ h3 {
 
 <div style="position:relative;">
   <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
-  <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+  <p><a href="https://eigensec.com/russellst/index.html">Scroll up and down to really get the feeling of how Parallax Scrolling works.</a></p>
   </div>
 </div>
 
 <div class="bgimg-1">
   <div class="caption">
-    <span class="border"><a href="https://eigensec.com/russellst/index.html">COOL!</a></span>
+    <span class="border">COOL!</span>
   </div>
 </div>
 
